fixed spacing between circle and text

--- a/src/components/DualSlidingPanel.css
+++ b/src/components/DualSlidingPanel.css
@@ -196,7 +196,7 @@
 		font-size: 16px;
 	}
 	.jump-button-container .button-text {
-		margin: 0 0 0 2rem;
+		margin: 0 0 0 1.75rem;
 		font-weight: 800;
 		line-height: 0.2;
 		font-size: 14px;
@@ -251,7 +251,7 @@
 	}
 	/* learn more button */
 	.learn-more-class button.learn-more {
-		width: 8rem;
+		width: 7rem;
 		/* height: auto; */
 	}
 	.jump-button-container .circle {
@@ -266,7 +266,7 @@
 		font-size: 20px;
 	}
 	.jump-button-container .button-text {
-		margin: 0 0 0 3rem;
+		margin: 0 0 0 2rem;
 		font-weight: 800;
 		line-height: 0.7;
 		font-size: 14px;
@@ -323,7 +323,7 @@
 	}
 	/* learn more button */
 	.learn-more-class button.learn-more {
-		width: 12rem;
+		width: 10rem;
 		/* height: auto; */
 	}
 	.jump-button-container .circle {
@@ -341,7 +341,7 @@
 		margin: 0 0 0 3rem;
 		font-weight: 600;
 		line-height: 0.8;
-		font-size: 22px;
+		font-size: 20px;
 	}
 	/* Farm */
 	/* Grapes */
@@ -406,7 +406,7 @@
 
 	/* learn more button */
 	.learn-more-class button.learn-more {
-		width: 18rem;
+		width: 15rem;
 		/* height: auto; */
 	}
 	.jump-button-container .circle {
@@ -416,7 +416,7 @@
 		border-radius: 1.9rem;
 	}
 	.jump-button-container .circle .jumparrow {
-		left: 1.2rem;
+		left: 1rem;
 		top: 1rem;
 		font-size: 30px;
 	}
